@@ -249,6 +249,7 @@
     <Compile Include="DynamicProxy.Tests\Classes\ServiceClass.cs" />
     <Compile Include="ClassWithAttributesTestCase.cs" />
     <Compile Include="DynamicProxy.Tests\Explicit\TwoInterfacesExplicit.cs" />
+    <Compile Include="DynamicProxy.Tests\InterceptionRetryTestCase.cs" />
     <Compile Include="DynamicProxy.Tests\InterfaceProxyWithTargetInterfaceAdditionalInterfacesTestCase.cs" />
     <Compile Include="DynamicProxy.Tests\Interfaces\IGenericInterfaceWithGenericMethodWithCascadingConstraintOnAnyReferenceType.cs" />
     <Compile Include="DynamicProxy.Tests\Interfaces\IGenericInterfaceWithGenericMethodWithCascadingConstraintOnAnyTypeWithDefaultConstructor.cs" />
@@ -285,6 +286,7 @@
     <Compile Include="GenInterfaces\GenInterfaceWithGenMethods.cs" />
     <Compile Include="GenInterfaces\GenInterfaceWithGenMethodsAndGenReturn.cs" />
     <Compile Include="Interceptors\LogInvocationInterceptor.cs" />
+    <Compile Include="Interceptors\ProceedNTimesInterceptor.cs" />
     <Compile Include="Interceptors\ThrowingInterceptor.cs" />
     <Compile Include="InterClasses\IExtendedService.cs" />
     <Compile Include="InterClasses\IService.cs" />
@@ -292,6 +294,7 @@
     <Compile Include="InterClasses\OneAndEmpty.cs" />
     <Compile Include="InterClasses\WithRefOut.cs" />
     <Compile Include="InterClasses\WithRefOutEmpty.cs" />
+    <Compile Include="Interfaces\ISimple.cs" />
     <Compile Include="MethodsWithAttributesOnParametersTestCase.cs" />
     <Compile Include="MixinTestCase.cs" />
     <Compile Include="ThrowingInterceptorException.cs" />
